Wed Nov  2 13:19:02 2005  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_2287_Regression/ServerRequest_Interceptor2.cpp:

          Add explicit exclude of forward request exception header to
          try and fix Solaris build error.

Wed Nov  2 12:46:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Intrusive_Ref_Count_Handle_T.inl:
          Fixed compile error

Wed Nov  2 12:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2289_Regression/MyStruct*.*:
          Readded these files to get things building, having hand modified
          generated file in the repo is not the right things todo.

Wed Nov  2 08:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/Unbounded_Octet.cpp:
          Changed include for the time being

Tue Nov  1 14:49:40 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp (end_anyop_header):
	  (end_anyop_source, end_client_header, end_client_inline):
	  (end_client_stubs, end_server_header, end_server_inline):
	  (end_server_skeletons, end_server_template_skeletons):
	  (end_server_template_inline, end_server_template_header):
	  (gen_stub_hdr_includes):
	  (start_anyop_source, start_anyop_header, start_client_header):
	  (start_client_inline, start_client_stubs):
	  (start_server_template_inline, start_server_header):
	  (start_server_inline, start_server_template_skeletons):
	  (start_server_skeletons, start_server_template_header):

	  Generate versioned namespace macro/declaration in the
	  appropriate location.

	* TAO_IDL/be_include/be_codegen.h (end_client_inline):
	  (end_client_stubs, end_server_inline):

	  New methods that (currently) add ending versioned namespace
	  macro/declaration to the corresponding file.

	* TAO_IDL/be/be_visitor_root/root.cpp (visit_root):

	  Added calls to end client stubs, and client and server inline
	  files.

	* tao/Makefile.am (nobase_include_HEADERS):
	* tao/tao.mpc:
